# webtronics-test

./: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
webtronics/: alembic.ini  main.py  pytest.ini
webtronics/api/: __init__.py  deps.py  exc.py  routes.py
webtronics/api/v1/: __init__.py  auth.py  likes.py  post_like.py  posts.py
webtronics/crud/: __init__.py  auth.py  base.py  like.py  posts.py
webtronics/database/: __init__.py  engine.py  metadata.py
webtronics/db/: __init__.py  db.py
webtronics/enums/: __init__.py  stages.py
webtronics/log/: __init__.py  logger.py
webtronics/migrations/: autogenerated_tables.py  env.py  registered_entities.py
webtronics/migrations/versions/: 2023_07_05_1127-2a9e00b8cee6_add_tables.py  2023_07_05_1127-2f1fa7648f7f_add_triggers.py
webtronics/models/: __init__.py  base.py  like.py  like_triggers.py  post.py  user.py
webtronics/pagination/: __init__.py  post_param.py
webtronics/schemas/auth/: __init__.py  request.py  response.py
webtronics/schemas/posts/: __init__.py  request.py  response.py
webtronics/services/: __init__.py  check_email_deliverable.py
webtronics/settings/: __init__.py  settings.py
webtronics/tests/: common.py  conftest.py  mocks.py  utils.py
webtronics/tests/api/auth/: test_refresh.py  test_signin.py  test_signup.py
webtronics/tests/factories/: likes.py  posts.py  users.py
webtronics/tests/test_migrations/: test_stairway.py
webtronics/utils/: crypto.py
(+7 files in other folders)
